@@ -55,33 +55,61 @@
     </scm>
 
     <ciManagement>
-        <system>tranvis-ci.org</system>
-        <url>https://travis-ci.org/database-rider/database-rider</url>
+        <system>GitHub Actions</system>
+        <url>https://github.com/database-rider/database-rider/actions</url>
     </ciManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jacoco.version>0.8.7</jacoco.version>
+        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.parameters>true</maven.compiler.parameters>
+        <maven.javadoc.skip>false</maven.javadoc.skip>
+        <jacoco.version>0.8.12</jacoco.version>
         <ds.version>1.9.6</ds.version>
-        <surefire.version>3.0.0-M7</surefire.version>
-        <testcontainers.version>1.17.3</testcontainers.version>
-        <jackson.version>2.13.3</jackson.version>
+        <compiler.plugin.version>3.14.0</compiler.plugin.version>
+        <deploy.plugin.version>3.1.4</deploy.plugin.version>
+        <javadoc.plugin.version>3.11.2</javadoc.plugin.version>
+        <release.plugin.version>3.1.1</release.plugin.version>
+        <surefire.version>3.5.2</surefire.version>
+        <surefire.addOpens>--add-opens java.base/java.util=ALL-UNNAMED</surefire.addOpens>
+        <kotlin.version>2.3.10</kotlin.version>
+        <spring.framework.version>6.2.0</spring.framework.version>
+        <spring.boot.version>3.5.0</spring.boot.version>
+        <junit.jupiter.version>5.13.4</junit.jupiter.version>
+        <junit.platform.version>1.13.4</junit.platform.version>
+        <junit4.version>4.13.2</junit4.version>
+        <testcontainers.version>1.20.6</testcontainers.version>
+        <jackson.version>2.18.3</jackson.version>
         <tuprolog.version>0.20.9</tuprolog.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <hibernate.javax.version>4.3.11.Final</hibernate.javax.version>
+        <hibernate.jakarta.version>6.2.3.Final</hibernate.jakarta.version>
+        <eclipselink.javax.version>2.5.2</eclipselink.javax.version>
+        <eclipselink.jakarta.version>4.0.1</eclipselink.jakarta.version>
+        <flyway.version>10.20.1</flyway.version>
+        <mockito.version>5.15.2</mockito.version>
+        <hsqldb.version>2.7.4</hsqldb.version>
+        <h2.version>2.3.232</h2.version>
+        <postgresql.version>42.7.5</postgresql.version>
+        <mssql-jdbc.version>12.8.1.jre11</mssql-jdbc.version>
+        <mysql.version>8.4.0</mysql.version>
+        <micronaut.version>1.3.6</micronaut.version>
+        <micronaut.test.version>1.2.0</micronaut.test.version>
+        <quarkus.version>3.27.2</quarkus.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>${junit4.version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- test -->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>2.6.1</version>
+            <version>${hsqldb.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -138,6 +166,31 @@
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit.jupiter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.jupiter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-params</artifactId>
+                <version>${junit.jupiter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-commons</artifactId>
+                <version>${junit.platform.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-runner</artifactId>
+                <version>${junit.platform.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
                 <version>1.33</version>
@@ -161,10 +214,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${compiler.plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>${maven.compiler.release}</release>
+                    <parameters>${maven.compiler.parameters}</parameters>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -172,6 +225,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>${surefire.addOpens}</argLine>
                     <includes>
                         <include>**/*It.java</include>
                         <include>**/*Test.java</include>
@@ -187,7 +241,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>3.0.0-M7</version>
+                <version>${release.plugin.version}</version>
                 <configuration>
                     <useReleaseProfile>false</useReleaseProfile>
                     <releaseProfiles>release</releaseProfiles>
@@ -205,18 +259,38 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
+                    <version>${deploy.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${compiler.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>${javadoc.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${release.plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <profiles>
+        <profile>
+            <id>jakarta</id>
+            <properties>
+                <maven.javadoc.skip>true</maven.javadoc.skip>
+            </properties>
+        </profile>
 
         <profile>
             <id>coverage</id>
